--- a/views/layout/adminHeader.ejs
+++ b/views/layout/adminHeader.ejs
@@ -9,9 +9,9 @@
     <div class="header2">
         <div class="topHeader">
             <a href="/admin/logout" class="Thenga" title="Logout"><div class="left" ><i class="bi text-danger bi-box-arrow-left ms-5 me-2"></i></div></a>
-            <div class="center text-center RAREADMIN">
-              <a href="/admin/home/">RARE KICK'S</a>
-            </div>
+            <div class="center text-center RAREADMIN" style="text-shadow: 1px 1px rgba(255, 255, 255, 0.274);">
+              <a href="/user/home/">RARE KICK'S</a>
+          </div>
             <div class="right">
                 <a href="" class="Manga" onclick="handleButtonClick()" id="button"><i class="bi bi-arrow-clockwise me-5 text-dark"></i></a>
             </div>
@@ -35,6 +35,9 @@
                   </div>
                   <div>
                     <a type="button" href="/admin/viewUsers" class="btn btn-dark d-flex justify-content-center" style=" text-decoration: none;">USER MANAGEMENT</a>
+                  </div>
+                  <div>
+                    <a type="button" href="/admin/allOrders" class="btn btn-dark d-flex justify-content-center" style=" text-decoration: none;">ORDER MANAGEMENT</a>
                   </div>
                     <div class="btn-group dropdown">
                 <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
