--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -5,7 +5,7 @@
 <body>
     <%- include('../layout/header')-%>
     <div class="container margineTop">
-        <h2 class="text-center mb-4" style="  font-family: 'Michroma', sans-serif;"><u>Welcome To RARE KICK'S</u></h2>
+        <h2 class="text-center mb-4" style="  font-family: 'Michroma', sans-serif;">Hei there!</h2>
         <div class="row">
             <div class="col-12 col-lg-8 imageContainer" id="imageContainer1">
                 <img src="../../public/images/whereslugo-ad047kyPBh8-unsplash.jpg" class="img-fluid firstImage" alt="..." style="border-radius: 20px; border: 1px solid black;">
