--- a/public/css/orderConfirmation.css
+++ b/public/css/orderConfirmation.css
@@ -1,23 +1,26 @@
 body {
     background-color: #f4f4f4;
-    color: #333;
+    color: #ffffff;
 }
 
-.container {
+.containerMa {
     max-width: 800px;
-    margin: 100px auto;
-    background-color: #fff;
+    margin: 50px auto;
+    background: linear-gradient(#000000,#414345) ;
     padding: 20px;
     border-radius: 10px;
+    border: 1px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-    color: #333;
+h3 {
+    color: #ffffff;
     text-align: center;
 }
 
+
 .confirmation-message {
+    color: rgb(125, 17, 17);
     text-align: center;
     margin-top: 20px;
 }
@@ -55,7 +58,7 @@ h1 {
     text-align: center;
     margin-top: 30px;
     font-size: 1.2em;
-    color: #ff0000;
+    color: #ffffff;
 }
 
 .success-logo {
@@ -63,7 +66,7 @@ h1 {
     margin-top: 20px;
 }
 
-.footer {
+.footerA {
     margin-top: 30px;
     text-align: center;
 }
