--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -141,8 +141,9 @@
 
     <div class="container">
         <div class="row" style="display: flex; justify-content: center;">
-            <div class="col-6" style="border: 1px solid black; border-radius: 20px;  min-width: 300px;">
-        <table  class="table table-striped table-hover" style="margin-top: 20px;">
+            <div class="col-6 bg-dark" style="border: 1px solid black; border-radius: 20px;  min-width: 300px;">
+                <h4 class="text text-center mb-2 text-white" style="margin-top: 20px;  font-family: 'Michroma', sans-serif;">Order Summary</h4>
+        <table  class="table table-dark table-striped" style="margin-top: 20px; ">
             <thead>
                 <tr>
                     <th scope="col"><b>Item</b></th>
@@ -183,8 +184,6 @@
 </div>
 
 
-
-    
             <% if(locals.products.length!==0) { %>
                 <div class="container d-flex flex-wrap justify-content-center mt-5 mb-5" style="gap: 10px;">
                     <a href="/user/checkOut/" class="btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content;">
